--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://raw.githubusercontent.com/jamesweb83/dad-joke-quiz/refs/heads/main/android-chrome-192x192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7988179761724460"
      crossorigin="anonymous"></script>
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>오늘의 아재 개그 퀴즈</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
