--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">  <!-- 언어를 한국어로 명확히 지정 -->
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="https://raw.githubusercontent.com/jamesweb83/dad-joke-quiz/refs/heads/main/android-chrome-192x192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+    <!-- SEO 관련 메타 태그 추가 -->
+    <meta name="keywords" content="아재개그, 퀴즈, 개그, 일일 퀴즈, 웃음, 한국어 퀴즈" />
+    <meta name="author" content="Your Name" />
+    <meta name="robots" content="index, follow" />
+    
+    <!-- 기존 태그들 유지 -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7988179761724460"
      crossorigin="anonymous"></script>
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>오늘의 아재 개그 퀴즈</title>
+    <!-- 오픈 그래프 태그들 유지 -->
+    <meta property="og:title" content="오늘의 아재개그 퀴즈" />
+    <meta property="og:description" content="매일 새로운 아재개그 퀴즈로 웃음 가득한 하루를 시작하세요!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dad-joke-quiz.vercel.app/" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/jamesweb83/dad-joke-quiz/refs/heads/main/image%201.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- 기존 메타 태그들 -->
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="매일 새로운 아재개그 퀴즈로 웃음 가득한 하루를 시작하세요!" />
+
+    <!-- 추가 SEO 태그 -->
+    <link rel="canonical" href="https://dad-joke-quiz.vercel.app/" />
+
+    <!-- 기존 아이콘 및 매니페스트 링크 -->
+    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/jamesweb83/dad-joke-quiz/refs/heads/main/android-chrome-192x192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />  <!-- 매니페스트 경로 수정 -->
+
+    <title>오늘의 아재 개그 퀴즈 - 매일 새로운 웃음!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
