--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
      crossorigin="anonymous"></script>
 
     <!-- 오픈 그래프 태그들 유지 -->
-    <meta property="og:title" content="오늘의 아재개그 퀴즈" />
-    <meta property="og:description" content="매일 새로운 아재개그 퀴즈로 웃음 가득한 하루를 시작하세요!" />
+    <meta property="og:title" content="매일 새로운 아재개그 퀴즈로 웃음 가득한 하루를 시작하세요!" />
+    <meta property="og:description" content="오늘의 아재개그 퀴즈" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dad-joke-quiz.vercel.app/" />
     <meta property="og:image" content="https://raw.githubusercontent.com/jamesweb83/dad-joke-quiz/refs/heads/main/image%201.jpg" />
